...
                    android:scaleX="-1"
                    android:src="@drawable/background_gradient"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/btBackHome"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:onClick="@{() -> activity.onBackPressed()}"
                    android:padding="@dimen/spacing"
                    android:src="@drawable/left_arrow"
                    android:visibility="gone"
...
                    android:src="@drawable/main_content"
                    app:layout_constraintBottom_toTopOf="@id/content"
                    app:layout_constraintTop_toTopOf="@id/tvContent"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing"
                    android:layout_marginEnd="@dimen/spacing"
                    android:layout_marginBottom="@dimen/spacing"
                    android:gravity="end"
...
